force-app/main/default/objects/Loyalty_Points_History__c/Loyalty_Points_History__c.object-meta.xml
<CustomObject>
    <label>Loyalty Points History</label>
    <nameField>
        <label>Loyalty Points History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Points Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>