force-app/main/default/objects/Loyalty_Points_History__c/fields/Created_By_Flow__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Flow</label>
    <type>Checkbox</type>
</CustomField>