force-app/main/default/objects/Loyalty_Points_History__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Loyalty Points Histories</relationshipLabel>
    <relationshipName>Loyalty_Points_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>