force-app/main/default/objects/Loyalty_Points_History__c/fields/Points_Added__c.field-meta.xml
<CustomField>
    <fullName>Points_Added__c</fullName>
    <label>Points Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>